# CodeWithGemini

./: .gitignore  .mcp.json.example  README.md  gemini-role-shift-plan.md  pyproject.toml  requirements.txt  server.py  setup.bat  setup.sh  setup_mcp.py
.claude/: settings.local.json
gemini_mcp/: __init__.py  __main__.py  tools.py
gemini_mcp/core/: __init__.py  parsers.py  runner.py
gemini_mcp/prompts/: execute.txt  ping.txt  plan.txt  review.txt
tests/: test_parsers.py  test_runner.py  test_tools.py
